APPDEV-5462 fixing buttons alignment on hbd product page
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@54570 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/global/standingorder.css
+++ b/projects/Media/docroot/assets/css/global/standingorder.css
@@ -178,7 +178,7 @@
 		width: 325px;
 	}
 	.thxgiving-addtocart .atc-button-wrapper {
-		display: inline-block !important;
+		display: inline-block;
 	}
 	.thxgiving-addtocart .cssbutton[data-component="addToListButton"] {
 		margin-left: 10px;
